Open one connection per run, and stop promising what a URL can undo
checkColumnsExist and checkRoutinesExist each opened their own
connection, so a spec cost two and the new sweep cost two per feed -
eighty for forty feeds. Waste against any database, and something worse
against a URL that does work on connect: H2's INIT=RUNSCRIPT would have
run its script eighty times, and the second run of a CREATE TABLE
fails, so every feed after the first would have reported a database
error belonging to the URL rather than to its spec. One connection now
serves the whole run, opened lazily so that a run which never reaches a
database never opens one, and closed in call()'s finally.

That URL also falsifies something the javadoc and the README both
state without qualification: that check reads only and is safe against
production. It is a claim about what this command does, and connecting
to a URL with an INIT clause is a write whoever issued it. Nothing can
be done from here - the URL is the driver's to interpret, and reading it
to find embedded work would mean knowing every driver's syntax - so both
places now say so rather than promising what they cannot keep.

conf/xldr.properties gains the same warning beside the sample URL, which
is where somebody about to write an INIT clause is looking, together
with the contrast that makes it confusing: a relative xldr.roots in that
file is resolved against the file, because that setting is ours, while a
relative path inside jdbc.url is resolved against the working directory,
because that string is the driver's. Java has no chdir, so xldr cannot
paper over the difference - only name it.